Bug 575210 - [17-18] JEP 411-393: Deprecate the Security Manager for Removal
Change-Id: I1792869bf8c62917a8df2687d877a22843f28716
Reviewed-on: https://git.eclipse.org/r/c/platform/eclipse.platform/+/190758
Tested-by: Sravan Kumar Lakkimsetti <sravankumarl@in.ibm.com>
Reviewed-by: Sravan Kumar Lakkimsetti <sravankumarl@in.ibm.com>